--- a/tvapp/app/src/main/res/layout/activity_main.xml
+++ b/tvapp/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
+    <androidx.leanback.widget.BrowseFrameLayout
+        android:id="@+id/blfNavBar"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:nextFocusLeft="@id/container"
+        android:background="#000"
+        >
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/btn_search"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginLeft="10dp"
+                android:text="Поиск"
+                android:gravity="center_vertical"
+                android:drawablePadding="20dp"
+                android:drawableLeft="@drawable/ic_search"
+                android:focusable="true"
+                android:background="@drawable/selector_menu"
+                android:textColor="@color/text_selector_white_grey"
+                />
+
+            <TextView
+                android:id="@+id/btn_home"
+                android:layout_width="match_parent"
+                android:layout_marginLeft="10dp"
+                android:gravity="center_vertical"
+                android:text="TS.KG"
+                android:drawablePadding="20dp"
+                android:drawableLeft="@drawable/ic_home"
+                android:layout_height="45dp"
+                android:background="@drawable/selector_menu"
+                android:textColor="@color/text_selector_white_grey"
+                android:focusable="true" />
+
+        </LinearLayout>
+
+
+    </androidx.leanback.widget.BrowseFrameLayout>
+
+</merge>
