--- a/tvapp/app/src/main/res/layout/fragment_home.xml
+++ b/tvapp/app/src/main/res/layout/fragment_home.xml
@@ -22,9 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".1"
+        app:layout_constraintGuide_percent=".05"
         />
-
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_start"
@@ -42,21 +41,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:adjustViewBounds="true"
         app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent=".6"
+        app:layout_constraintWidth_percent=".5"
         app:layout_constraintDimensionRatio="16:9"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:scaleType="centerCrop"
         />
-    
-    
+
+
     <View
         android:id="@+id/gradient_horizontal"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent=".7"
-        app:layout_constraintStart_toStartOf="@+id/guideline_start"
+        app:layout_constraintWidth_percent=".6"
+        app:layout_constraintStart_toEndOf="@+id/guideline_start"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/banner_gradient"
@@ -64,7 +63,7 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="370dp"
+        android:layout_width="400dp"
         android:textSize="26sp"
         android:textColor="#fff"
         android:maxLines="2"
@@ -79,7 +78,7 @@
         android:textSize="14sp"
         android:textColor="#fff"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/title"
+         app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_constraintStart_toStartOf="@+id/guideline_start"
         android:layout_height="wrap_content"
         />
@@ -87,7 +86,7 @@
 
     <TextView
         android:id="@+id/desciption"
-        android:layout_width="wrap_content"
+        android:layout_width="400dp"
         android:textSize="13sp"
         android:textColor="#fff"
         android:maxLines="4"
@@ -98,12 +97,22 @@
         android:layout_height="wrap_content"
         />
 
+    <TextView
+        android:id="@+id/info"
+        android:layout_width="wrap_content"
+        android:textSize="12sp"
+        android:textColor="#adacac"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/desciption"
+        app:layout_constraintStart_toStartOf="@+id/guideline_start"
+        android:layout_height="wrap_content"
+        />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/list_fragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginLeft="12dp"
+        android:layout_marginLeft="9dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guideline_center"
