--- a/tvapp/app/src/main/res/values/style.xml
+++ b/tvapp/app/src/main/res/values/style.xml
@@ -1,3 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="Theme.TvApp" parent="@style/Theme.Leanback">
+        <item name="android:windowBackground">#202020</item>
+    </style>
 </resources>
