--- a/tvapp/app/src/main/res/layout/item_movie.xml
+++ b/tvapp/app/src/main/res/layout/item_movie.xml
@@ -12,5 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
+        android:background="#000"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
