--- a/tvapp/app/src/main/res/layout/activity_details.xml
+++ b/tvapp/app/src/main/res/layout/activity_details.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.DetailsFragment">
+    tools:context=".DetailsActivity">
 
+   <FrameLayout
+       android:id="@+id/details_container"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent" />
 
-    <TextView
-        android:id="@+id/desciption"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-</FrameLayout>
+</merge>
