--- a/tvapp/app/src/main/res/layout/fragment_details.xml
+++ b/tvapp/app/src/main/res/layout/fragment_details.xml
@@ -1,14 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.DetailsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_start"
+        android:layout_width="124dp"
+        android:layout_height="100dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".06" />
 
-</FrameLayout>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".94"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".6"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".05"
+        />
+
+
+    <Button
+        android:id="@+id/button_back"
+        android:layout_width="62dp"
+        android:layout_height="36dp"
+        android:layout_gravity="start"
+        android:drawablePadding="8dp"
+        android:padding="8dp"
+        android:text="Назад"
+        android:textSize="10sp"
+        app:layout_constraintStart_toStartOf="@+id/guideline_start"
+        app:layout_constraintTop_toBottomOf="@+id/guideline_top" />
+
+    <ImageView
+        android:id="@+id/img_banner"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:adjustViewBounds="true"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent=".45"
+        app:layout_constraintDimensionRatio="16:9"
+        android:layout_alignParentEnd="true"
+        app:layout_constraintEnd_toStartOf="@id/guideline_end"
+        app:layout_constraintTop_toBottomOf="@+id/guideline_top"
+        android:scaleType="centerCrop"
+        android:textIsSelectable="false"
+        />
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="350dp"
+        android:textSize="26sp"
+        android:layout_marginTop="20dp"
+        android:textColor="#fff"
+        android:maxLines="2"
+        app:layout_constraintStart_toStartOf="@+id/guideline_start"
+        app:layout_constraintTop_toBottomOf="@+id/button_back"
+        android:layout_height="wrap_content"
+
+        android:textIsSelectable="false"
+        />
+
+    <TextView
+        android:id="@+id/country"
+        android:layout_width="wrap_content"
+        android:textSize="14sp"
+        android:textColor="#fff"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_constraintStart_toStartOf="@+id/guideline_start"
+        android:layout_height="wrap_content"
+
+        android:textIsSelectable="false"
+        />
+
+
+    <TextView
+        android:id="@+id/desciption"
+        android:layout_width="350dp"
+        android:textSize="13sp"
+        android:textColor="#fff"
+        android:maxLines="4"
+        android:layout_marginTop="16dp"
+        android:lineSpacingMultiplier="1.2"
+        app:layout_constraintTop_toBottomOf="@+id/country"
+        app:layout_constraintStart_toStartOf="@+id/guideline_start"
+        android:layout_height="wrap_content"
+
+        android:textIsSelectable="false"
+        />
+
+    <TextView
+        android:id="@+id/info"
+        android:layout_width="wrap_content"
+        android:textSize="12sp"
+        android:textColor="#adacac"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/desciption"
+        app:layout_constraintStart_toStartOf="@+id/guideline_start"
+        android:layout_height="wrap_content"
+
+        android:textIsSelectable="false"
+        />
+
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/series_list_fragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/guideline_center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
