--- a/tvapp/app/src/main/res/layout/fragment_home.xml
+++ b/tvapp/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeFragment"
+    tools:context=".fragments.HomeFragment"
  >
 
     <androidx.constraintlayout.widget.Guideline
@@ -44,7 +44,6 @@
         app:layout_constraintWidth_percent=".5"
         app:layout_constraintDimensionRatio="16:9"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
         android:scaleType="centerCrop"
         />
 
@@ -73,9 +72,10 @@
         />
 
     <TextView
-        android:id="@+id/country"
-        android:layout_width="wrap_content"
-        android:textSize="14sp"
+        android:id="@+id/genre"
+        android:layout_width="400dp"
+        android:maxLines="2"
+        android:textSize="12sp"
         android:textColor="#fff"
         android:layout_marginTop="16dp"
          app:layout_constraintTop_toBottomOf="@+id/title"
@@ -92,7 +92,7 @@
         android:maxLines="4"
         android:layout_marginTop="16dp"
         android:lineSpacingMultiplier="1.2"
-        app:layout_constraintTop_toBottomOf="@+id/country"
+        app:layout_constraintTop_toBottomOf="@+id/genre"
         app:layout_constraintStart_toStartOf="@+id/guideline_start"
         android:layout_height="wrap_content"
         />
@@ -109,7 +109,7 @@
         />
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/list_fragment"
+        android:id="@+id/movies_list_fragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginLeft="9dp"
