--- a/tvapp/app/src/main/res/layout/fragment_details.xml
+++ b/tvapp/app/src/main/res/layout/fragment_details.xml
@@ -9,128 +9,124 @@
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_start"
-        android:layout_width="124dp"
-        android:layout_height="100dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent=".06" />
+        app:layout_constraintGuide_percent=".04" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_end"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent=".94"
+        app:layout_constraintGuide_percent=".96"
         />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".6"
-        />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".05"
+        app:layout_constraintGuide_percent=".04"
         />
 
 
-    <Button
-        android:id="@+id/button_back"
-        android:layout_width="62dp"
-        android:layout_height="36dp"
-        android:layout_gravity="start"
-        android:drawablePadding="8dp"
-        android:padding="8dp"
-        android:text="Назад"
-        android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="@+id/guideline_start"
-        app:layout_constraintTop_toBottomOf="@+id/guideline_top" />
 
-    <ImageView
-        android:id="@+id/img_banner"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_header"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/guideline_start"
         app:layout_constraintEnd_toEndOf="parent"
-        android:adjustViewBounds="true"
-        app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent=".45"
-        app:layout_constraintDimensionRatio="16:9"
-        android:layout_alignParentEnd="true"
-        app:layout_constraintEnd_toStartOf="@id/guideline_end"
-        app:layout_constraintTop_toBottomOf="@+id/guideline_top"
-        android:scaleType="centerCrop"
-        android:textIsSelectable="false"
-        />
+        app:layout_constraintTop_toTopOf="@+id/guideline_top"
+        app:layout_constraintBottom_toTopOf="@id/series_list_fragment"
+        >
+        <Button
+            android:id="@+id/button_back"
+            android:layout_width="62dp"
+            android:layout_height="36dp"
+            android:layout_gravity="start"
+            android:drawablePadding="8dp"
+            android:padding="8dp"
+            android:text="Назад"
+            android:textSize="10sp"
+            app:layout_constraintStart_toStartOf="@+id/layout_info"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="350dp"
-        android:textSize="26sp"
-        android:layout_marginTop="20dp"
-        android:textColor="#fff"
-        android:maxLines="2"
-        app:layout_constraintStart_toStartOf="@+id/guideline_start"
-        app:layout_constraintTop_toBottomOf="@+id/button_back"
-        android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/movie_cover"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            app:layout_constraintDimensionRatio="16:9"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/layout_header"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent=".45" />
 
-        android:textIsSelectable="false"
-        />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_info"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintStart_toStartOf="@id/layout_header"
+            app:layout_constraintTop_toBottomOf="@id/button_back"
+            app:layout_constraintWidth_percent=".45">
 
-    <TextView
-        android:id="@+id/country"
-        android:layout_width="wrap_content"
-        android:textSize="14sp"
-        android:textColor="#fff"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        app:layout_constraintStart_toStartOf="@+id/guideline_start"
-        android:layout_height="wrap_content"
+            <TextView
+                android:id="@+id/movie_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
+                android:textColor="#fff"
+                android:textSize="26sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/layout_info" />
 
-        android:textIsSelectable="false"
-        />
+            <TextView
+                android:id="@+id/movie_genre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:maxLines="2"
+                android:textColor="#fff"
+                android:textSize="12sp"
+                app:layout_constraintTop_toBottomOf="@id/movie_title" />
 
+            <TextView
+                android:id="@+id/movie_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:lineSpacingMultiplier="1.2"
+                android:maxLines="4"
+                android:textColor="#fff"
+                android:textSize="13sp"
+                app:layout_constraintTop_toBottomOf="@id/movie_genre" />
 
-    <TextView
-        android:id="@+id/desciption"
-        android:layout_width="350dp"
-        android:textSize="13sp"
-        android:textColor="#fff"
-        android:maxLines="4"
-        android:layout_marginTop="16dp"
-        android:lineSpacingMultiplier="1.2"
-        app:layout_constraintTop_toBottomOf="@+id/country"
-        app:layout_constraintStart_toStartOf="@+id/guideline_start"
-        android:layout_height="wrap_content"
-
-        android:textIsSelectable="false"
-        />
-
-    <TextView
-        android:id="@+id/info"
-        android:layout_width="wrap_content"
-        android:textSize="12sp"
-        android:textColor="#adacac"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/desciption"
-        app:layout_constraintStart_toStartOf="@+id/guideline_start"
-        android:layout_height="wrap_content"
-
-        android:textIsSelectable="false"
-        />
-
+            <TextView
+                android:id="@+id/movie_additional_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:textColor="#adacac"
+                android:textSize="12sp"
+                app:layout_constraintTop_toBottomOf="@id/movie_description" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/series_list_fragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="-35dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@id/guideline_start"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guideline_center"
+        app:layout_constraintTop_toBottomOf="@+id/layout_header"
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
