--- a/tvapp/app/src/main/res/drawable/gradient_default.xml
+++ b/tvapp/app/src/main/res/drawable/gradient_default.xml
@@ -1,4 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#000" />
+    <corners android:radius="16dp" />
+    <stroke
+        android:width="2dp"
+        android:color="#000" />
+</shape>
