--- a/tvapp/app/src/main/res/drawable/gradient_focused.xml
+++ b/tvapp/app/src/main/res/drawable/gradient_focused.xml
@@ -1,4 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#4CAF50" />
+            <corners android:radius="16dp" />
+        </shape>
+    </item>
+
+    <item>
+        <shape android:shape="rectangle">
+            <gradient
+                android:angle="90"
+                android:startColor="#81C784"
+                android:endColor="#388E3C" />
+            <corners android:radius="16dp" />
+        </shape>
+    </item>
+</layer-list>
