--- a/tvapp/app/src/main/res/drawable/gradient_selected.xml
+++ b/tvapp/app/src/main/res/drawable/gradient_selected.xml
@@ -1,4 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#FF6200EE" />
+            <corners android:radius="16dp" />
+        </shape>
+    </item>
 
-</selector>
+    <item>
+        <shape android:shape="rectangle">
+            <gradient
+                android:angle="90"
+                android:startColor="#FF6200EE"
+                android:endColor="#FF3700B3" />
+            <corners android:radius="16dp" />
+        </shape>
+    </item>
+</layer-list>
