--- a/tvapp/app/src/main/res/drawable/selector_menu.xml
+++ b/tvapp/app/src/main/res/drawable/selector_menu.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--    <item android:drawable="@drawable/radio_btn_selected" android:state_checked="false" />-->
-    <!--    <item android:drawable="@drawable/selected_menu_bg" android:state_checked="true" />-->
 
-    <item android:drawable="@drawable/selected_menu" android:state_activated="true" />
+     <item android:drawable="@drawable/gradient_selected" android:state_activated="true" />
 
-    <item android:drawable="@drawable/selected_menu" android:state_focused="true" />
+     <item android:drawable="@drawable/gradient_focused" android:state_focused="true" />
 
-    <!-- default -->
-    <item android:drawable="@color/transparent" />
+     <item android:drawable="@drawable/gradient_default" />
 </selector>
